# Simple-Headers

./: .gitignore  CMakeLists.txt  readme.md
cmake/: simpleheadersConfig.cmake.in
examples/: main.c
src/simpleheaders/: CommonMacros.h
src/simpleheaders/BitfieldStuff/: BitfieldMacros.h
src/simpleheaders/CommonStructs/: CollectionTypes.h
src/simpleheaders/DebugingStuff/: Debug.h
src/simpleheaders/Logging/: BitfieldLogging.h  Logging.h
src/simpleheaders/ParameterChecking/: ParameterChecking.h
